@@ -1,3 +1,8 @@
+2011-08-16  Yao Qi  <yao@codesourcery.com>
+
+	* tic6x-linux-tdep.c: Move const arrays definition from here...
+	* tic6x-tdep.c: to here ...
+
 2011-08-14  Yao Qi  <yao@codesourcery.com>
 
 	* NEWS: New port to Texas Instruments TMS320C6x.
